--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.6.4"
+    "php": ">=5.6.4",
+    "ext-bcmath" : "*"
   },
   "autoload": {
     "psr-4": {
