--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">=5.6.4",
-    "ext-bcmath" : "*"
+    "php": ">=5.5",
+    "ext-bcmath": "*"
   },
   "autoload": {
     "psr-4": {
@@ -26,5 +26,8 @@
     "psr-4": {
       "Bnb\\Tests\\": "tests/"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^4.0"
   }
 }
